--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
         <section id="home" class="full-height">
             <canvas id="particles"></canvas>
             <div class="hero-content">
-                <h1>Samuel Bispo</h1>
-                <h2>Engenheiro de software</h2>
-                <p class="tagline">Professor dos DSs, com muito orgulho!</p>
+                <h1>Vitor Hugo</h1>
+                <h2>Estudante de TDS</h2>
+                <p class="tagline">Aluno dos DSs, com muito orgulho!</p>
                 <a href="#about" class="cta-button">Saiba mais</a>
             </div>
         </section>
