--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
         <section id="home" class="full-height">
             <canvas id="particles"></canvas>
             <div class="hero-content">
-                <h1>Vitor Hugo</h1>
-                <h2>Estudante de TDS</h2>
+                <h1>Takalhama</h1>
+                <h2>Estudante de TDS
+                </h2>
                 <p class="tagline">Aluno dos DSs, com muito orgulho!</p>
                 <a href="#about" class="cta-button">Saiba mais</a>
             </div>
@@ -49,7 +50,7 @@
                         <div class="circle-frame"></div>
                     </div>
                     <div class="about-texts">
-                        <p class="bio-text">Sua bio deve vir aqui, escreva algumas palavras bonitas sobre si. O que gosta de fazer, o que gosta de comer e o que gosta de jogar/ler/assistir.</p>
+                        <p class="bio-text">Eu sou o Takalhama, gosto bastante de desenhar, jogar e ouvir música</p>
                     </div>
                     <div class="skills-grid"></div>
                 </div>
@@ -94,7 +95,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; <span id="year"></span> Feito com ❤ por Sam Bispo.</p>
+            <p>&copy; <span id="year"></span> .</p>
         </div>
     </footer>
 
